style: fix the spacing for the accordion header (#1968)

--- a/components/accordion/css/index.scss
+++ b/components/accordion/css/index.scss
@@ -33,3 +33,7 @@
 .utrecht-accordion__panel {
   @include utrecht-accordion__panel;
 }
+
+.utrecht-accordion__header {
+  @include utrecht-accordion__header;
+}
